2002-12-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c:
	* dae/opd_image.h:
	* dae/opd_kernel.c: use hash table entry 0 for kernel and module image

2002-12-04  John Levon  <levon@movementarian.org>

	* pp/opp_symbol.h:
	* pp/opp_symbol.cpp:
	* pp/format_output.h:
	* pp/format_output.cpp:
	* others from above: create format_output namespace, some
	  clean up
 
2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: revert last change, it break daemon...
	
2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: re-enable opd_check_image_mtime() it's not
	  perfect but better than nothing

	* libutil++/cverb.cpp: comment fix

2002-12-04  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Revised checking to determine kernel
	  interface.


2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_test.c: measure system + user time

	* dae/oprofiled.c: better error message
	* daemon/oprofiled.c: write_abi() is static

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_stat.c:
	* libdb/db_debug.c: Alex whisp me than a few code was not 64 bits
	  size_t safe.

2002-12-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in:
	* doc/Makefile.am: remove references to deprecated stuff
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: add --version
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/op_start:
	* utils/op_start_25:
	* utils/op_stop_25:
	* utils/op_stop: print deprecation notice
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/op_session.c:
	* utils/op_dump: print deprecation notice
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: do not shutdown on --reset. Send
	  signal on --reset/--save like op_session. Try to dump
	  like op_session to hack race "fix"
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: complain on opcontrol --save 
 